	      * listColumns
	      * listIndependentColumns
	      * getColumns
	      * getIndependentColumns
	      * destroy
	    - Implemented methods of Column on ValueMatrix on AoSubMatrix
	      * getSourceMQ
	      * getName
	      * getFormula
	      * isIndependent
	      * getDataType
	      * getSequenceRepresentation
	      * getGenerationParameters
	      * getRawDataType
	      * destroy


	0.5.2 (Gigatronik Ingolstadt GmbH)

	    - Added automatic determination for missing inverse relations of ATFX files.
	    - Upgrade to woodstox 4.4.1


	0.5.1 (Christian Rechner)

	    - Upgrade to woodstox 4.3.0
	    - Increased default value of context parameter 'EXT_COMP_SEGSIZE' to 500 MB
	    - Added handling of new ASAM ODS 5.3.0 base attributes 'ao_bit_count' and 'ao_bit_offset' 
		- Implemented writing of DT_BOOLEAN values to external component files
		

	0.5.0 (Christian Rechner)
	
	    - Upgrade to ODS IDL 5.3.0 (not all new methods implemented)
		- Added base model definition for 'asam31'
	    - Fixed wrong data type of base attributes 'start_offset' and
	      'flags_start_offset' (DT_LONG) in base model 'asam29'.
	    - Upgrade to woodstox 4.2.0
	    - Included patch from O.Flebbe: attribute 'flags' of 'AoLocalColumn' is optional

	0.4.3 (Christian Rechner)
	
		- Removed converter and exporter code.
		- Changed method of reading external component files from mapped memory to
		  'normal' buffered reader (Many thanks to Olaf Flebbe!)
		- Fixed wrong warning and added exception on method 'setIsUnique' of interface
		  'ApplicationAttribute' when trying to reduce uniquness of application attribute
		  derived from unique base attribute.
		- Upgrade of woodstox to version 4.1.5.


	0.4.2 (Christian Rechner)
	
		- Added property to switch writing external component instances.
		- Added check if application element of type 'AoLocalColumn' exists
		  to avoid null pointer exception.
		- Added tests for writing external component files